add console, remember window positions